add a list in category

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 :root {
-  --bg-body: #121212;
+  --bg-body: #5774cb;
   --text-main: #ffffff;
   --bg-header: #1f1f1f;
   --border-color: #2c2c2c;
-  --accent-color: #0077ff;
+  --accent-color: #e3e7eb;
   --text-alt: #ccc;
   --text-footer: #cccccc;
 }
